# cpp-connect4-alpha-zero

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Connect4_CPP.sln  LICENSE  README.md  __init__.py.in  config.txt
Connect4_CPP/: Connect4_CPP.vcxproj  Connect4_CPP.vcxproj.filters  alphabeta.cpp  connect4_game.cpp  connect4_game.h  connect4_solver.h  game_play.cpp  game_play.h  mcts.cpp  mcts.h  minimax_player.cpp  minimax_player.h  model.cpp  model.h  neural_worker.h  oracle.cpp  oracle.h  python_bindings.cpp  training_loop.cpp  transportation_table.h  zorbist_table.h
Connect4_CPP/saves/cpp/: best_001_00200.pt
TicTacToe_CPP/: TicTacToe_CPP.vcxproj  TicTacToe_CPP.vcxproj.filters  game.cpp  game.h  mcts.h  model.cpp  model.h
src/: config.h  connect4_game.cpp  connect4_game.h  connect4_solver.h  game_play.cpp  game_play.h  mcts.cpp  mcts.h  model.cpp  model.h  neural_worker.h  python_bindings.cpp  test_connect4.cpp  training_loop.cpp  transportation_table.h  utils.h
